# Mobile-Forensic

./: Dockerfile  README.md  docker-compose.yml  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: globals.css  layout.tsx  page.tsx
components/: AIAnalysisTab.tsx  AuditLogsTab.tsx  ConnectedDevicesTab.tsx  ContinuousVerifier.tsx  DashboardTab.tsx  DeletedArtifactsTab.tsx  DeviceInfoTab.tsx  DuplicateDetectionTab.tsx  EvidenceExplorerTab.tsx  FaceAuthLogin.tsx  HashVerificationTab.tsx  HexViewer.tsx  KeywordSearchTab.tsx  LocationHistoryTab.tsx  LogicalAcquisitionTab.tsx  LogsTab.tsx  ReportsTab.tsx  SQLiteAnalyzerTab.tsx  SettingsTab.tsx  TimelineTab.tsx  UserManagementTab.tsx
lib/: crypto-helper.ts  forensic-data.ts  location-data.ts  md5.ts
libs/node-domexception-mock/: index.js  package.json
modules/deleted_artifacts/: artifact_api.py  artifact_parser.py  artifact_preview.py  artifact_statistics.py  deleted_artifact_service.py  hex_viewer.py  metadata_panel.py  timeline_builder.py
modules/device_detection/: device_api.py  device_cache.py  device_detector.py  device_monitor.py  device_service.py  usb_events.py
modules/location/: geo_export.py  location_api.py  location_parser.py  location_service.py  location_statistics.py  map_renderer.py  timeline_builder.py
src/: main.py
src/core/: base_engine.py  di.py
src/engines/: ai_engine.py  background_worker.py  device_engine.py  forensic_engine.py  security_engine.py
src/installer/: build_installers.py
types/: device.ts  forensic.ts  location.ts
(+4 files in other folders)
