[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-forensic-suite"
version = "2.0.0"
description = "Professional Enterprise Desktop Mobile Forensic Analysis Suite"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Examiner Unit", email = "cyber-crime@polda.go.id" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS"
]
dependencies = [
    "PySide6>=6.6.0",
    "opencv-python-headless>=4.9.0",
    "Pillow>=10.2.0",
    "matplotlib>=3.8.0",
    "cryptography>=42.0.0",
    "reportlab>=4.1.0",
    "openpyxl>=3.1.2",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.1",
    "psutil>=5.9.8"
]

[project.urls]
Homepage = "https://github.com/cyber-crime/mobile-forensic-suite"

[tool.setuptools.packages.find]
where = ["src"]
